--- a/index.htm
+++ b/index.htm
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en-US">
     
@@ -9,29 +10,24 @@
     <!-- OUR STYLESHEET -->
     <link rel="stylesheet" href="style.css" type="text/css" media="all">
 
-   
+    
 </head>
 
 <body>
 
-	<ul>
-		<li>
-			<a href="#">Home</a>
-		</li>
-		<li>
-			<a href="#">About</a>
-		</li>
-		<li>
-			<a href="#">Services</a>
-		</li>
-		<li>
-			<a href="#">Team</a>
-		</li>
-		<li>
-			<a href="#">Contact</a>
-		</li>
-	</ul>
+   <div class="container">
+       <div class="square"></div>
+        <div class="square"></div>
+         <div class="square"></div>
+          <div class="square"></div>
+           <div class="square"></div>
+            <div class="square"></div>
+             <div class="square"></div>
+              <div class="square"></div>
+               <div class="square"></div>
+                <div class="square"></div>
+    <div class="text">background animation</div>
+   </div>
 
 </body>
-
 </html>
